2009-02-15  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: sound-juicer now depends on
	libcanberra.

2009-02-15  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: anjuta now depends on
	libunique.

2009-02-15  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: added libgweather to desktop
	suite metamodule, and pangomm to c++ bindings metamodule.

2009-02-14  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.26.modules: updated NetworkManager and
	network-manager-applet modules, also added libnl as required by
	NetworkManager.

2009-02-14  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: fixed libunique reference (it's
	unique, not libunique)

2009-02-14  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: added libunique dependency to
	gnome-media (used by the new volume control); moved esound to suggests
	as it is only required for the disabled-by-default vumeter.

2009-02-13  Vivien Malerba  <malerba@gnome-db.org>

	* modulesets/gnome-external-deps-2.26.modules:
	updated libgda to 3.99.11

2009-02-13  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: hamster-applet branched for
	2.26.

2009-02-11  Johan Dahlin  <jdahlin@async.com.br>

	* modulesets/gnome-2.26.modules:
	gobject-introspection, gir-repository, gjs and gnome-shell
	moved to git

2009-02-10  William Jon McCann  <jmccann@redhat.com>

	* modulesets/gnome-suites-2.26.modules: gnome-screensaver
	moved to svn.

2009-02-10  William Jon McCann  <jmccann@redhat.com>

	* modulesets/gnome-suites-2.26.modules: gnome-screensaver
	moved to git.

2009-02-10  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py: set MONO_PREFIX and MONO_GAC_PREFIX so the
	jhbuilded mono environment is used.  (closes: #550671)

2009-02-10  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: fixed sqlite module name in