@@ -1,5 +1,11 @@
 2009-02-15  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/utils/httpcache.py: possibility to pass a age argument when
+	using httpcache, to have a different expiration age, also passing 0
+	will make it not using the cache.
+
+2009-02-15  Frederic Peters  <fpeters@0d.be>
+
 	* modulesets/gnome-suites-2.26.modules: sound-juicer now depends on
 	libcanberra.
 
